@@ -1,0 +1,19 @@
+<!DOCTYPE html>
+<meta http-equiv="Content-Type" content="text/html" charset="UTF-8">
+    <div class="x-goto-top" style="display: none;">
+		<div class="x-arrow"></div>
+		<div class="x-stick"></div>
+	</div>
+    <div id="header" class="uk-navbar uk-navbar-attached">
+		<div class="uk-container x-container">
+			<div id="navbar" class="uk-navbar uk-navbar-attached">
+				<a id="brand" href="/" class="uk-navbar-brand uk-visible-large">Platform Mapping</a>
+                <ul id="ul-navbar" class="uk-navbar-nav uk-hidden-small">
+                    <li class="x-nav"><a href="/platform/"><span class="x-icon"></span>Platform node info</a></li>
+                    <li class="x-nav"><a href="/physical/"><span class="x-icon"></span>Physical machine info</a></li>
+                    <li class="x-nav"><a href="/display/"><span class="x-icon"></span>Display machine info</a></li>
+                    <li class="x-nav"><a href="/backend/"><span class="x-icon"></span>Collect platform info</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
